syntax = "proto3";

package fjarm.users.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/fjarm/fjarm/api/pkg/fjarm/users/v1";
option java_multiple_files = true;
option java_outer_classname = "UserPasswordProto";
option java_package = "xyz.fjarm.users.v1";

// The password a user supplies at registration or later updates. This message should not actually contain a
// value outside of those scenarios.
message UserPassword {
  optional string password = 1 [(buf.validate.field).required = true];
}
